--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
