--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-fast-marquee": "^1.6.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
+    "react-image-magnify": "^2.7.4",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
