--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "formik": "^2.4.2",
     "react": "^18.2.0",
@@ -31,6 +32,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
